using Backend.Domain.Shared;

namespace Backend.Domain.Customers;

public interface ICustomerRepository : IRepository<Customer>
{
}